# copterOS

./: .gitignore  .gitmodules  Kconfig  Makefile  README.md  geht.txt  root@192.168.2.2
configs/: tlm_vf610_defconfig
crazyflie/: Kconfig  Makefile
crazyflie/drivers/interface/: i2cdev.h  led.h  motors.h  mpu6050.h  mpu6500.h  watchdog.h
crazyflie/drivers/src/: Makefile  motors.c  mpu6500.c
crazyflie/drivers/src_old/: Makefile
crazyflie/hal/interface/: pm.h  uart.h  usec_time.h
crazyflie/hal/src/: Makefile  imu.c  pm.c
crazyflie/hal/src_org/: Makefile  eskylink.c  pm_f103.c  pm_f405.c  proximity.c  usec_time.c
crazyflie/include/: config.h
crazyflie/modules/interface/: commander.h  console.h  csystem.h  pid.h
crazyflie/modules/src/: Makefile  commander.c  console.c  controller.c  crtp.c  pid.c  pidctrl.c  sensfusion6.c  stabilizer.c  system.c  trigger.c
crazyflie/modules/src_org/: commander.c
crazyflie/utils/: Makefile
crazyflie/utils/interface/: debug.h
crazyflie/utils/src/: Makefile  cfassert.c  version.c
docu/: Doxyfile
include/: display.h  emergency.h  linux_client.h  linux_commander.h  motor_ctrl.h  rc_commander.h
src/: Kconfig  Makefile  copter.c  display.c  emergency.c  linux_client.c  linux_commander.c  motor_ctrl.c  rc_commander.c  remote_control.c
tools/autocopt-tools/: .gitignore  Makefile.am  README.md  autogen.sh  configure.ac
tools/autocopt-tools/include/: Makefile.am
tools/autocopt-tools/include/autocopt/: .autocopt.h.swo  autocopt.h  emergency.h
tools/autocopt-tools/src/: Makefile.am  autocopt.c  autocopt_prv.h  clear.c  control.c  emergency.c  pid.c  ping  ping.c  reset  reset.c  shutdown.c
tools/m4boot/: Makefile  m4boot.c
